# mcp49xx-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
examples/: linux.rs
src/: buffering.rs  channel.rs  command.rs  construction.rs  interface.rs  lib.rs  resolution.rs
tests/: integration.rs  interface.rs
tests/base/: mod.rs
