[package]
name = "mcp49x"
version = "0.1.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/mcp49x-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the MCP49x digital-to-analog converters (DAC)."
readme = "README.md"
keywords = ["digital", "analog", "dac", "spi", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/mcp49x-rs"
documentation = "https://docs.rs/mcp49x"
include = [
    "**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[badges]
travis-ci = { repository = "eldruin/mcp49x-rs", branch = "master" }
coveralls = { repository = "eldruin/mcp49x-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
embedded-hal = "0.2"

[dev-dependencies]
linux-embedded-hal = "0.2"
embedded-hal-mock = "0.4"

[profile.release]
lto = true
