[package]
name = "mcp49xx"
version = "0.2.0" # remember to update html_root_url
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/mcp49xx-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the MCP49xx and MCP48xx digital-to-analog converters (DAC)."
readme = "README.md"
keywords = ["digital", "analog", "dac", "spi", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/mcp49xx-rs"
documentation = "https://docs.rs/mcp49xx"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[dependencies]
embedded-hal = "0.2.6"

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.8"

[profile.release]
lto = true
